--- a/e2e-tests/.ci/.e2erc
+++ b/e2e-tests/.ci/.e2erc
@@ -3,9 +3,10 @@
 export MME2E_DC_SERVER="docker-compose -p mmserver -f $(readlink -e ../../server/build/gitlab-dc.postgres.yml) -f $(readlink -e ./server.override.yml)"
 export MME2E_DC_DASHBOARD="docker-compose -p mmdashboard -f $(readlink -e ./dashboard/docker/docker-compose.yml) -f $(readlink -e ./dashboard.override.yml)"
 export MME2E_UID=$(id -u)
-export MME2E_SERVER_IMAGE_DEFAULT="mattermostdevelopment/mm-ee-test:$(git rev-parse --short=7 HEAD)"
-export MME2E_SERVER_IMAGE=${MME2E_SERVER_IMAGE:-$MME2E_SERVER_IMAGE_DEFAULT}
-export MME2E_CI_BASE_URL="${MME2E_CI_BASE_URL:-localhost}"
+
+# Default the optional variables that are used in the docker-compose file
+export SERVER_IMAGE_DEFAULT="mattermostdevelopment/mm-ee-test:$(git rev-parse --short=7 HEAD)"
+export SERVER_IMAGE=${SERVER_IMAGE:-$SERVER_IMAGE_DEFAULT}
 
 # Function definitions
 mme2e_log () { echo "[$(date -Is)]" "$@"; }
@@ -28,8 +29,9 @@ mme2e_load_env_file () {
   . ./env
   set ${MME2E_PREVIOUS_ALLEXPORT}
 }
-mme2e_generate_envfile_from_vars () {
-  for VARIABLE in "$@"; do
+mme2e_generate_envfile_from_var_names () {
+  # Read var names from stdin, one per line
+  while read VARIABLE; do
     [ -z "${!VARIABLE:-}" ] || echo "${VARIABLE}=${!VARIABLE}";
   done
 }
